apply plugin: 'com.android.application'
apply plugin: 'me.tatarka.retrolambda'
apply plugin: 'android-apt'

android {
    compileSdkVersion 25
    buildToolsVersion '25.0.0'

    defaultConfig {
        applicationId "de.czyrux.store"
        minSdkVersion 15
        targetSdkVersion 25
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }

    testOptions {
        unitTests.returnDefaultValues = true
        unitTests.all {
            // All the usual Gradle options.
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }

    packagingOptions {
        exclude 'META-INF/rxjava.properties' // Rx1 and Rx2 error
    }
}

dependencies {

    final SUPPORT_LIBRARY_VERSION = '25.0.1'

    final MOCKITO_VERSION = '1.10.19'
    final JUNIT_VERSION = '4.12'

    compile fileTree(dir: 'libs', include: ['*.jar'])

    // ---- APP DEPENDENCIES

    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
    compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"

    // Rx 2
    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
    compile 'io.reactivex.rxjava2:rxjava:2.0.2'
    compile 'com.jakewharton.rxrelay2:rxrelay:2.0.0'

    compile 'com.jakewharton:butterknife:8.4.0'
    apt 'com.jakewharton:butterknife-compiler:8.4.0'

    compile 'com.squareup.picasso:picasso:2.5.2'

    // ---- UNIT TEST CONFIGURATION
    testCompile "org.mockito:mockito-core:$MOCKITO_VERSION"

    // Added for more collections matchers.
    // Use version 1.0.0.1 with Hamcrest 1.3, version 2.0.0.0 with Hamcrest 2.0
    // https://github.com/hamcrest/hamcrest-junit
    testCompile('org.hamcrest:hamcrest-junit:1.0.0.1') {
        exclude group: 'org.hamcrest', module: 'hamcrest-core'
    }

    testCompile "junit:junit:$JUNIT_VERSION"

    // ---- UI TEST CONFIGURATION

    final ESPRESSO_VERSION = '2.2.2'
    final DEXMAKER_VERSION = '1.2'
    androidTestCompile "com.google.dexmaker:dexmaker:$DEXMAKER_VERSION"
    androidTestCompile("com.google.dexmaker:dexmaker-mockito:$DEXMAKER_VERSION") {
        exclude group: 'org.hamcrest', module: 'hamcrest-core'
    }

    androidTestCompile "org.mockito:mockito-core:$MOCKITO_VERSION"

    androidTestCompile("com.android.support.test.espresso:espresso-core:$ESPRESSO_VERSION") {
        exclude module: 'support-annotations'
        exclude module: 'javax.inject'
        exclude module: 'javawriter'
    }
    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$ESPRESSO_VERSION") {
        exclude module: 'support-annotations'
        exclude module: 'recyclerview-v7'
        exclude module: 'support-v4'
        exclude module: 'design'
    }
    androidTestCompile("com.android.support.test.espresso:espresso-intents:$ESPRESSO_VERSION") {
        exclude module: 'support-annotations'
    }
}
